--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,34 @@ body {
   text-align: center;
   overflow-x: hide;
 }
-
+h1,h2,h3,h4,h5,h6 {
+  font-family: Arial;
+  font-weight: bold;
+}
+h1 {
+  font-size: 80px;
+}
+h2 {
+  font-size: 60px;
+}
+h3 {
+  font-size: 40px;
+}
+h4 {
+  font-size: 40px;
+}
+h5 {
+  font-size: 30px;
+}
+h6{
+  font-size: 20px;
+}
 .howTo{
   margin-top: 300px;
   padding-bottom: 50px;
   padding-right: 40px;
   padding-left: 40px;
+  background-color: #32CD32;
+  color: #f5f5f5;
+  font-family: 'Quicksand';
 }
