--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ subheading {
   font-size: 50px;
   background-color: #DCDCDC;
   color: 	#A9A9A9;
+  font-family: Arial;
 }
 .howTo{
   margin-top: 300px;
