--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
 body {
   text-align: center;
   overflow-x: hide;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: Arial;
