--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ ul {
   list-style-type: none;
   background-color: black;
   border-radius: 4px;
-  padding 15px;
+  padding: 15px;
   float: center;
   text-align:left;
 }
