--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   margin-bottom: 0px;
-  background: url('css/assets/code-wallpaper-18.png') no-repeat fixed center;
+  background: url('https://custommarkup.ml/css/assets/code-wallpaper-18.png') no-repeat fixed center;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: Arial;
