--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,8 @@ a {
   background-color: #32CD32;
   color: #f5f5f5;
   font-family: 'Quicksand';
-  float:  center;
-  text-align:center;
+  float:left;
+  text-align:left;
   font-size: 35px;
 }
 .howTo p{
