--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ a {
   padding-bottom: 50px;
   padding-right: 40px;
   padding-left: 40px;
-  background-color: #32CD32;
+  background-color: #1B1D1E;
   color: #f5f5f5;
   font-family: 'Quicksand';
   float:left;
