--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,17 @@
+html { 
+   height: 100%;
+   overflow: hidden;
+}
 body {
-  overflow-x: hide;
-  margin-top: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px;
+  margin: 0;
+  padding: 0;
+  -webkit-perspective: 1px;
+  perspective: 1px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
   background: url('https://custommarkup.ml/css/assets/code-wallpaper-18.png') no-repeat fixed center;
 }
 h1,h2,h3,h4,h5,h6 {
@@ -56,6 +64,37 @@ a {
 a:visited {
   text-decoration:none;
   color: #4078c0;
+}
+header {
+  box-sizing: border-box;
+  min-height: 40vw;
+  padding: 30vw 0 5vw;
+  position: relative;
+  -webkit-transform-style: inherit;
+  transform-style: inherit;
+  width: 100vw;
+}
+
+header,
+header:before { background: 50% 50% / cover; }
+
+header::before {
+  bottom: 0;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: block;
+  background-color: #8a8;
+  background-image: url(background.jpg);
+  background-size: cover;
+  -webkit-transform-origin: center center 0;
+  -webkit-transform: translateZ(-1px) scale(2);
+  transform-origin: center center 0;
+  transform: translateZ(-1px) scale(2);
+  z-index: -1;
+  min-height: 100vh;
 }
 .howTo{
   margin-top: 1000px;
