Added hover to a tag

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,14 @@ code {
 a {
   text-decoration:none;
   color: #4078c0;
+  -webkit-transition-duration:0.6s;
+  /*   Safari */
+  transition-duration:0.6s; 
+}
+a:hover {
+   text-decoration:underline;
+   background-color:#4078c0;
+   color:white;
 }
 a:visited {
   text-decoration:none;
