--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ a {
 a:hover {
    text-decoration:underline;
    background-color:#4078c0;
-   color:white;
+   color:#f5f5f5;
 }
 a:visited {
   text-decoration:none;
