--- a/css/main.css
+++ b/css/main.css
@@ -58,8 +58,7 @@ a {
 }
 a:hover {
    text-decoration:underline;
-   background-color:#4078c0;
-   color:#f5f5f5;
+   background-color:#f5f5f5;
 }
 a:visited {
   text-decoration:none;
