--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ a:visited {
 .btn {
   padding:15px;
   background-color:black;
+  color: white;
   border-radius: 4px;
   font-size: 40px;
   font-family: 'Quicksand';
@@ -101,6 +102,7 @@ a:visited {
 .btn a, visited {
   padding: 15px;
   background-color: black;
+  color: white;
   border-radius: 4px;
   font-size: 40px;
   font-family: 'Quicksand';
