--- a/css/main.css
+++ b/css/main.css
@@ -113,5 +113,9 @@ a:hover {
 }
 ::selection {
   color: white;
-  background: #003366;
+  background-color: #68c0ff;
+}
+::moz-selection {
+ color: white;
+   background-color: #68c0ff;
 }
