Float social icons right
The social icons now float right

--- a/css/main.css
+++ b/css/main.css
@@ -105,11 +105,12 @@ a:hover {
 }
 #social {
   bottom: 5%;
-  left: 5%;
+  right: 5%;
   position:fixed;
   z-index: 100;
   margin: 0;
   padding: 0;
+  float: right;
 }
 ::selection {
   color: white;
