--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html { 
    height: 100%;
 }
-.title {
+body {
    margin:0;
    padding:0;
    background: url('https://custommarkup.ml/img/wallpaper.png') no-repeat fixed center;
