--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ html {
 body {
    margin:0;
    padding:0;
-   background: url(img/wallpaper.png') no-repeat fixed center;
+   background: url('img/wallpaper.png') no-repeat fixed center;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: Arial;
