--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,11 @@ html {
 body {
    margin:0;
    padding:0;
-   background: url('img/wallpaper.png') no-repeat fixed center;
+   background: #0d2a59;   
+   background: -webkit-linear-gradient(left top, #0d2a59, #1a4ea3);
+   background: -o-linear-gradient(bottom right, #0d2a59, #1a4ea3); 
+   background: -moz-linear-gradient(bottom right, #0d2a59, #1a4ea3);
+   background: linear-gradient(to bottom right, #0d2a59, #1a4ea3);
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: Arial;
