--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
    background: -moz-linear-gradient(bottom right, #0d2a59, #1a4ea3);
    background: linear-gradient(to bottom right, #0d2a59, #1a4ea3);
    background-position:fixed;
+   background-repeat:none;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: Arial;
